# HEXSTACK

./: .gitignore  CMakeLists.txt  DIRTY CLEAN BOY.hex  LEADer of Cola.hex  README.md  RELEASE_CHECKLIST.md  default.hex
.github/workflows/: build-mac.yml  build-plugins.yml  release.yml
docs/: CHOOSE_YOUR_OS_FIRST.md  MAC_BETA_INSTALL.md  MAC_INSTALL.md  RELEASE_PIPELINE.md  WINDOWS_INSTALL.md
installer/: HEXSTACK_Installer.iss
installers/macos/: Install-HEXSTACK-Mac.command  distribution.xml
installers/windows/: Install-HEXSTACK-Windows.ps1  hexstack.iss
scripts/: build-and-refresh-windows.ps1  install-vst3-to-system-folder.ps1  make-release-bundle.ps1  refresh-deliverables.ps1
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
